[package]
name = "webcam-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.24.5"
pollster = "0.2.5"
v4l = { version = "0.13.1", features = ["v4l2"] }
wgpu = "0.14.2"
winit = "0.27.5"
env_logger = "0.9"
log = "0.4"
bytemuck = { version = "1.4", features = ["derive"] }
zenoh = "0.7.0-rc"
async-std = "1.12.0"
